--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,13 +10,20 @@
         <activity
             android:name=".Main2Activity"
             android:label="@string/app_name">
+        </activity>
+        <activity
+            android:name=".FundFilterActivity"
+            android:theme="@style/Transparent" />
+        <activity android:name=".AreaActivity" >
+
+        </activity>
+        <activity android:name=".RelativeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".FundFilterActivity" android:theme="@style/Transparent"></activity>
     </application>
 
 </manifest>
